@@ -10,7 +10,7 @@ import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -267,7 +267,7 @@ public class VoiceManagerImageToPdfPanel extends JPanel implements InitializingB
 					//
 				} // for
 					//
-				final JFileChooser jfc = new JFileChooser(Util.toFile(Paths.get(".")));
+				final JFileChooser jfc = new JFileChooser(Util.toFile(Path.of(".")));
 				//
 				File file = null;
 				//
@@ -325,7 +325,7 @@ public class VoiceManagerImageToPdfPanel extends JPanel implements InitializingB
 				//
 				if (!isTestMode) {
 					//
-					pdDocument.save(Util.toFile(Paths.get("temp.pdf")));// TODO
+					pdDocument.save(Util.toFile(Path.of("temp.pdf")));// TODO
 					//
 				} // if
 					//
